fixed col-4, built food photo showcase section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,10 +35,6 @@ section {
   padding: 80px 0;
 }
 
-.box {
-  padding: 1%;
-}
-
 /* -------- HEADINGS --------  */
 
 h1,
@@ -194,4 +190,29 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #E67E22;
+}
+
+/* ---------------------------------- */
+/* MEALS */
+/* ---------------------------------- */
+
+.meals-showcase {
+  list-style: none;
+  width: 100%;
+}
+
+.meals-showcase li {
+  display: block;
+  float: left;
+  width: 25%;
+}
+
+.meal-photo {
+  width: 100%;
+  margin: 0;
+}
+
+.meal-photo img {
+  width: 100%;
+  height: auto;
 }
