--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,20 +6,20 @@
 
 COLORS: ORANGE - #E67E22
 
-1. BASIC SET UP
-2. REUSABLE COMPONETS
+BASIC SET UP
+REUSABLE COMPONETS
   - HEADINGS
   - PARAGRAPHS
   - ICONS
   - BUTTONS
-3. HEADER
-4. FEATURES
-5. MEALS
-6. HOW IT WORKS
+HEADER
+FEATURES
+MEALS
+HOW IT WORKS
 
 */
 /* ---------------------------------- */
-/* 1. BASIC SETUP */
+/* BASIC SETUP */
 /* ---------------------------------- */
 
 * {
@@ -404,4 +404,60 @@ cite img {
   border-radius: 50%;
   margin-right: 10px;
   vertical-align: middle;
+}
+
+/* ---------------------------------- */
+/* SIGN UP */
+/* ---------------------------------- */
+
+.section-plans {
+  background-color: #F4F4F4;
+}
+
+.plan-box {
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  width: 90%;
+  margin-left: 5%;
+  box-shadow: 0 2px 2px #EFEFEF;
+}
+
+.plan-box div {
+  padding: 15px;
+  border-bottom: 1px solid #E8E8E8;
+}
+
+.plan-box div:first-child {
+  background-color: #FCFCFC;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.plan-box div:last-child {
+  text-align: center;
+  border: 0;
+}
+
+.plan-price {
+  font-size: 300%;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color: #E67E22;
+}
+
+.plan-price span {
+  font-size: 30%;
+  font-weight: 300;
+}
+
+.plan-price-meal {
+  font-size: 80%;
+}
+
+.plan-box ul {
+  list-style: none;
+}
+
+.plan-box ul li {
+  padding: 5px 0;
 }
