form section completed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -157,7 +157,8 @@ a:active {
 /* -------- BUTTONS --------  */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
@@ -167,7 +168,8 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
   background-color: #E67E22;
   border: 1px solid #E67E22;
   color: #fff;
@@ -181,12 +183,15 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
   background-color: #CF6D17;
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type=submit] {
   border: 1px solid #CF6D17;
 }
 
@@ -461,3 +466,32 @@ cite img {
 .plan-box ul li {
   padding: 5px 0;
 }
+
+/* ---------------------------------- */
+/* FORM */
+/* ---------------------------------- */
+
+.contact-form {
+  width: 60%;
+  margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #CCC;
+}
+
+textarea {
+  height: 100px;
+}
+
+input[type=checkbox] {
+  margin: 10px 5px 10px 0;
+}
+
+*:focus {outline: none;}
